Extensive project refactoring